--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -11,7 +11,7 @@ $base-border: darken($base-background, 5%);
 $content-background: #ffffff;
 $text-color: #444444;
 $heading-color: #333333;
-$primary-color: #700429;
+$primary-color: #900028;
 $meta-color: lighten($text-color, 18%);
 $link-color: $primary-color;
 
